--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Firebase Configuration (path to service account JSON)
 firebase.config.file-path=path/to/your/serviceAccountKey.json
+server.port=8081
 
