--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,11 @@ spring.datasource.username=user_meena
 spring.datasource.password=meena456
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# Configure binary data handling
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 
-# Firebase Configuration (path to service account JSON)
-firebase.config.file-path=path/to/your/serviceAccountKey.json
+spring.jpa.open-in-view=false
+
 server.port=8081
 
