--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,20 @@
 spring:
   application:
     name: product-services
+  datasource:
+    url: jdbc:postgresql://localhost:5432/product_db
+    username: user_meena
+    password: meena456
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+
 management:
   endpoints:
     web:
       exposure:
         include: "*"
+logging:
+  level:
+    web: DEBUG
