--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: product-services
     plan: free
     buildCommand: ./gradlew build
-    startCommand: java -jar build/libs/*.jar
+    startCommand: java -jar build/libs/product-services.jar
     envVars:
       - key: SPRING_DATASOURCE_URL
         value: jdbc:postgresql://localhost:5432/product_db
