--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: product-services
     plan: free
+    runtime: java
     buildCommand: ./gradlew build
     startCommand: java -jar build/libs/product-services.jar
     envVars:
