--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,7 @@ services:
     plan: free
     buildCommand: ./gradlew build
     startCommand: java -jar build/libs/product-services.jar
+    runtime: java17
     envVars:
       - key: SPRING_DATASOURCE_URL
         value: jdbc:postgresql://localhost:5432/product_db
@@ -13,3 +14,4 @@ services:
         value: meena456
       - key: PORT
         value: 8081
+        
